package operation;

/**
 工厂方法

 */
public interface IFactory
{
    Operation CreateOperation();
}
