@startuml
interface IFactory{
+CreateUser()
+CreateDepartment()
}
interface IUser{
}
sqlServerUser..-up-|>IUser
mysqlUser..-up-|>IUser
interface IDepartment{
}
sqlServerDepartment..-up-|>IDepartment
mysqlDepartment..-up-|>IDepartment

sqlServerFactory..>sqlServerUser
sqlServerFactory-up-..|>IFactory
sqlServerFactory..>sqlServerDepartment
mysqlFactory-up-..|>IFactory
mysqlFactory..>mysqlUser
mysqlFactory..>mysqlDepartment

@enduml